Updated runtime, project runs with ant: compile, run, jar, run-jar.